# panel-pop

./: .cproject  .gitignore  .project  CMakeLists.txt  InputManager.cpp  InputManager.h  InputState.cpp  InputState.h  LICENSE  Main.cpp  Main.h  Makefile  Makefile.am  Makefile.in  README.md  SDLContext.cpp  SDLContext.h  configure  configure.ac  configure.scan  main.cpp  main.h  panelpop.ini  panelpop.json
AI/: AIBoardController.cpp  AIBoardController.h  BoardScanner.cpp  BoardScanner.h  MoveActions.h
CMake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
Config/: ConfigHandler.cpp  ConfigHandler.h  InputConfig.cpp  InputConfig.h  KeyConfig.h  KeyboardControllerConfig.h
Debug/: InputManager.d  SDLContext.d  main.d  makefile  objects.mk  panel-pop  sources.mk  subdir.mk
Debug/Game/: Block.d  Board.d  Game.d  GarbageBlock.d  subdir.mk
Debug/Rendering/: BoardRenderer.d  GameRenderer.d  Renderer.d  subdir.mk
Game/: Block.cpp  Block.h  Board.cpp  Board.h  BoardController.cpp  BoardController.h  BoardEventHandler.cpp  BoardEventHandler.h  EndlessGame.cpp  EndlessGame.h  Game.cpp  Game.h  GameEventHandler.cpp  GameEventHandler.h  GarbageBlock.cpp  GarbageBlock.h  KeyboardController.cpp  KeyboardController.h  VsGame.cpp  VsGame.h
InputEvents/: InputEvent.cpp  InputEvent.h  JoyAxisDirection.cpp  JoyAxisDirection.h  JoyButton.cpp  JoyButton.h  JoyHat.cpp  JoyHat.h  KeyboardKey.cpp  KeyboardKey.h
Menus/: KeyConfigMenu.cpp  KeyConfigMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h
Rendering/: BoardRenderer.cpp  BoardRenderer.h  ChainPanel.cpp  ChainPanel.h  ChainPopup.cpp  ChainPopup.h  ComboPopup.cpp  ComboPopup.h  EndlessGameRenderer.cpp  EndlessGameRenderer.h  GameRenderer.cpp  GameRenderer.h  GbQueueRenderer.cpp  GbQueueRenderer.h  Particle.cpp  Particle.h  Popup.cpp  Popup.h  Renderer.cpp  Renderer.h  ScorePanel.cpp  ScorePanel.h  TitleScreenRenderer.cpp  TitleScreenRenderer.h  VsGameRenderer.cpp  VsGameRenderer.h
States/: AIGameState.cpp  AIGameState.h  DemoGameState.cpp  DemoGameState.h  EndlessGameState.cpp  EndlessGameState.h  FadeTransition.cpp  FadeTransition.h  GameState.cpp  GameState.h  OptionsMenuState.cpp  OptionsMenuState.h  State.cpp  State.h  StateManager.cpp  StateManager.h  TitleScreen.cpp  TitleScreen.h  VsGameState.cpp  VsGameState.h
assets/: 1p.xcf  2p.xcf  Info.plist  bg1.xcf  panel-pop_sfx.ftm  sprites.xcf  title.xcf
autom4te.cache/: output.1  output.3  requests  traces.1  traces.2  traces.3
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-WinDebug.mk  Makefile-WinRelease.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-WinDebug.bash  Package-WinRelease.bash  configurations.xml  project.properties  project.xml
nbproject/private/: private.xml
platform/vita/: panelpop.json  startup.xcf
