 AC_PREREQ([2.69])
 AC_INIT([panel-pop], [0.1], [])
 AM_INIT_AUTOMAKE([subdir-objects])
 AM_SILENT_RULES([yes])
 AC_CONFIG_SRCDIR([InputManager.cpp])
 AC_CONFIG_HEADERS([config.h])

 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC

 # Checks for libraries.

 PKG_CHECK_MODULES([SDL2], [sdl2])

 # Checks for header files.
 AC_CHECK_HEADERS([stdlib.h])

 # Checks for library functions.

 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
